General: Fix warnings when building with Java 21